@@ -153,6 +153,7 @@ Nick Pellow
 Nicola Ken Barozzi
 Nico Seessle
 Nigel Magnay
+Oliver Rossmueller
 Patrick C. Beard
 Patrick Chanezon
 Patrick G. Heck (Gus Heck)
